Improved .vim/Makefile not to download stuffs everytime.

--- a/.vim/Makefile
+++ b/.vim/Makefile
@@ -5,26 +5,26 @@
 VIMBALL := vim +"source %" +q
 
 
-.PHONY: all $(shell sed <Makefile -n '/:.*\#$$/ s/:.*$$//p')
+.PHONY: all
 all: $(shell sed <Makefile -n '/:.*\#\#$$/ s/:.*$$//p')
 
 
 xmledit: xmledit.vba ##
 	$(VIMBALL) $<
-xmledit.vba: #
-	wget -qNO $@ \
+xmledit.vba:
+	wget -nv -NO $@ \
 	    http://www.vim.org/scripts/download_script.php?src_id=13387
 
 
 mkd: syntax/mkd.vim ##
-syntax/mkd.vim: #
+syntax/mkd.vim:
 	mkdir -p $(@D)
-	wget -qNO $@ \
-	    http://github.com/plasticboy/vim-markdown/raw/master/mkd.vim
+	wget -nv -NO $@ --no-check-certificate \
+	    https://github.com/plasticboy/vim-markdown/raw/master/mkd.vim
 
 json: syntax/json.vim ##
-syntax/json.vim: #
+syntax/json.vim:
 	mkdir -p $(@D)
-	wget -qNO $@ \
+	wget -nv -NO $@ \
 	    http://www.vim.org/scripts/download_script.php?src_id=10853
 
