Install fonts to ~/Library/Fonts for Macs

--- a/.fonts/Makefile
+++ b/.fonts/Makefile
@@ -2,9 +2,16 @@
 # Author: Jaeho Shin <netj@sparcs.org>
 # Created: 2009-03-20
 
+ifeq ($(shell uname),Darwin)
+    # Mac
+    FONTSDIR := ~/Library/Fonts
+else
+    FONTSDIR := .
+endif
+
 NanumFontURL := http://cdn.naver.com/naver/NanumFont/fontfiles/NanumFont_TTF_ALL.zip
 NanumFontsZip := $(shell basename $(NanumFontURL))
-NanumFonts := \
+NanumFontNames := \
     NanumGothic.ttf             \
     NanumGothicBold.ttf         \
     NanumGothicExtraBold.ttf    \
@@ -14,6 +21,7 @@ NanumFonts := \
     NanumBrush.ttf              \
     NanumPen.ttf                \
     #
+NanumFonts := $(NanumFontNames:%=$(FONTSDIR)/%)
 
 .PHONY: all clean distclean $(NanumFontsZip)
 all: $(NanumFonts)
@@ -26,7 +34,7 @@ distclean: clean
 	rm -f $(NanumFonts)
 
 $(NanumFonts): $(NanumFontsZip)
-	unzip -o $< $@
+	unzip -o $< $(@F) -d $(@D)
 $(NanumFontsZip):
 	wget -N $(NanumFontURL)
 
