--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,31 +2,122 @@
 # Author: Jaeho Shin <netj@sparcs.org>
 # Created: 2010-12-26
 
-set-option -g prefix C-T
-set-option -g base-index 1
-set-option -g set-titles on
+# C-t as prefix
+set-option -g prefix C-t
+unbind C-t
+bind C-t last-window
+unbind t
+bind t send-prefix
 
 # UTF-8
 set-option -g status-utf8 on
 set-window-option -g utf8 on
 
 # status and title format
-set-option -g set-titles-string "#T - #I:#W@#H"
-set-option -g status-justify left #centre
-set-option -g status-left "#T" ##I:#W#F]"
-set-option -g status-left-length 32
-set-option -g status-right "@#H"
+set-option -g set-titles-string "#T - #I:#W#F#S^#H"
+set-option -g status-justify right
+set-option -g status-left "#T"
+set-option -g status-left-length 48
+set-option -g status-right "#S^#H"
 set-option -g status-right-length 16
 
 # status colours
-set-option -g status-left-fg black
-set-option -g status-left-bg yellow
+set-option -g status-bg blue
 set-option -g status-fg black
-set-option -g status-bg green
-set-option -g status-right-fg black
-set-option -g status-right-bg cyan
+set-option -g status-left-fg white
+set-option -g status-left-attr bright
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-alert-fg yellow
+set-window-option -g window-status-alert-attr reverse
 
-# window options
-set-window-option -g clock-mode-style 24
+# some more options
+set-option -g base-index 1
+set-option -g set-titles on
+set-window-option -g monitor-activity on
 set-window-option -g mode-keys vi
+set-window-option -g clock-mode-style 24
 
+# allow buffer scrolling also for xterm-likes
+# See: https://bbs.archlinux.org/viewtopic.php?id=102217
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+
+### Key Bindings
+
+## GNU Screen style key bindings, which I'm pretty used to
+
+# screen ^C c 
+unbind ^C
+bind ^C new-window
+bind c
+bind c new-window
+
+# detach ^D d
+unbind ^D
+bind ^D detach
+
+# displays * 
+unbind *
+bind * list-clients
+
+# next ^@ ^N sp n 
+unbind ^N
+bind ^N next-window
+unbind n
+bind n next-window
+
+# prev ^H ^P p ^? 
+unbind ^P
+bind ^P previous-window
+unbind p
+bind p previous-window
+
+# title A
+unbind A
+bind A command-prompt "rename-window %%"
+
+# windows ^W w 
+unbind ^W
+bind ^W list-windows
+unbind w
+bind w list-windows
+
+# quit \ 
+unbind \
+bind \ confirm-before "kill-server"
+
+# kill K k 
+unbind K
+bind K confirm-before "kill-window"
+unbind k
+bind k confirm-before "kill-window"
+
+# redisplay ^L l 
+unbind ^L
+bind ^L refresh-client
+unbind l
+bind l refresh-client
+
+
+## vim style key bindings
+unbind Tab
+bind Tab select-pane -t :.+
+
+# move around panes with j and k, a bit like vim
+# as of tmux 1.1, there is no way to move based on pane position (ie, no way to
+# move the pane to the right)
+bind j select-pane -t :.+ # down-pane
+bind k select-pane -t :.- # up-pane
+
+# resize panes like vim
+# feel free to change the "1" to however many lines you want to resize by, only
+# one at a time can be slow
+bind < resize-pane -L 1
+bind > resize-pane -R 1
+bind - resize-pane -D 1
+bind + resize-pane -U 1
+
+
+## key bindings compatible with my Emacs config
+bind C-o select-pane -t :.- # up-pane
