--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # screen ^C c 
 unbind ^C
 bind ^C new-window
-bind c
+unbind c
 bind c new-window
 
 # detach ^D d
