curl instead of wget

--- a/.vim/Makefile
+++ b/.vim/Makefile
@@ -12,7 +12,7 @@ all: $(shell sed <Makefile -n '/:.*\#\#$$/ s/:.*$$//p')
 xmledit: xmledit.vba ##
 	$(VIMBALL) $<
 xmledit.vba:
-	wget -nv -NO $@ \
+	curl -Ro $@ \
 	    http://www.vim.org/scripts/download_script.php?src_id=13387
 
 
@@ -21,20 +21,20 @@ syntax/mkd.vim: vim-markdown.zip
 	unzip -o $<
 vim-markdown.zip:
 	mkdir -p $(@D)
-	wget -nv -NO $@ --no-check-certificate \
+	curl -Ro $@ --insecure \
 	    http://plasticboy.com/dox/vim-markdown.zip #https://github.com/plasticboy/vim-markdown/zipball/master
 
 
 json: syntax/json.vim ##
 syntax/json.vim:
 	mkdir -p $(@D)
-	wget -nv -NO $@ \
+	curl -Ro $@ \
 	    http://www.vim.org/scripts/download_script.php?src_id=10853
 
 applescript: syntax/applescript.vim ##
 syntax/applescript.vim:
 	mkdir -p $(@D)
-	wget -nv -NO $@ \
+	curl -Ro $@ \
 	    http://www.vim.org/scripts/download_script.php?src_id=12658
 
 coffee-script: bundle/vim-coffee-script ##
@@ -43,5 +43,5 @@ bundle/vim-coffee-script: autoload/pathogen.vim
 	cd $(@D) && git clone git://github.com/kchmck/vim-coffee-script.git
 autoload/pathogen.vim:
 	mkdir -p $(@D)
-	wget -nv -NO $@ \
+	curl -Ro $@ \
 	    http://www.vim.org/scripts/download_script.php?src_id=15192
