Removed tmux 1.6 noises

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,8 @@ set-option -g status-left-fg white
 set-option -g status-left-attr bright
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-alert-fg yellow
-set-window-option -g window-status-alert-attr reverse
+set-window-option -g window-status-activity-fg yellow
+set-window-option -g window-status-activity-attr reverse
 
 # some more options
 set-option -g base-index 1
@@ -84,7 +84,7 @@ unbind w
 bind w list-windows
 
 # quit \ 
-unbind \
+unbind \ 
 bind \ confirm-before "kill-server"
 
 # kill K k 
