--- a/.vim/.gitignore
+++ b/.vim/.gitignore
@@ -1,14 +1,6 @@
-/ftplugin
-/ftdetect
-/indent
-/syntax
-/autoload
-/bundle
-/doc
-/*.vba
-/*.zip
-
-/.netrwhist
-/.VimballRecord
-/colors
-/plugin/*.vim
+/*
+!/.gitignore
+!/Makefile
+!/setup-vam.vim
+!/filetype.vim
+!/jellybeans.vim.patch
