spinning off .bash/ to bpm, Bash Plug-in Manager
[bpm]: https://github.com/netj/bpm#readme

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Mac/DefaultFontFallbacksChanger"]
 	path = Mac/DefaultFontFallbacksChanger
 	url = git://github.com/netj/MacOSXDefaultFontFallbacksChanger.git
+[submodule ".bash/plugins"]
+	path = .bash/plugins
+	url = git://github.com/netj/bpm
