tmux: enabled 256 color support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,11 @@ set-option -g status-left-length 48
 set-option -g status-right "#S^#H"
 set-option -g status-right-length 16
 
+# 256 color: XXX tmux should be launched with option -2.
+set-option -g default-terminal "screen-256color"
+# You can check 256 color support with this command:
+#   curl http://www.frexx.de/xterm-256-notes/data/256colors2.pl | perl
+
 # status colours
 set-option -g status-bg blue
 set-option -g status-fg black
