tmux: compatibility with older versions (< 1.4)
- window-status-activity-fg still shows error, but no choice.
- no reverse for activity window status
- black for normal window status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,10 +31,11 @@ set-option -g status-bg blue
 set-option -g status-fg black
 set-option -g status-left-fg white
 set-option -g status-left-attr bright
+set-window-option -g window-status-fg black
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-activity-attr reverse
+set-window-option -g window-status-activity-attr bright
 
 # some more options
 set-option -g base-index 1
@@ -103,6 +104,10 @@ unbind ^L
 bind ^L refresh-client
 unbind l
 bind l refresh-client
+
+# reload config
+unbind ^R
+bind ^R source ~/.tmux.conf
 
 
 ## vim style key bindings
