tmux keybinding to record pane output to file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,6 +109,9 @@ bind l refresh-client
 unbind ^R
 bind ^R source ~/.tmux.conf
 
+# record window
+bind-key | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
+
 
 ## vim style key bindings
 unbind Tab
