tmux key bindings clean up

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ unbind C-t
 bind C-t last-window
 unbind t
 bind t send-prefix
+unbind C-b
 
 # UTF-8
 set-option -g status-utf8 on
@@ -53,35 +54,32 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 ## GNU Screen style key bindings, which I'm pretty used to
 
-# screen ^C c 
+# screen
 unbind ^C
 bind ^C new-window
 unbind c
 bind c new-window
 
-# detach ^D d
+# detach
 unbind ^D
 bind ^D detach
-
-# displays * 
-unbind *
-bind * list-clients
 
 # next ^@ ^N sp n 
 unbind ^N
 bind ^N next-window
 unbind n
 bind n next-window
+unbind C-Space
+bind C-Space next-window
 
 # prev ^H ^P p ^? 
 unbind ^P
 bind ^P previous-window
 unbind p
 bind p previous-window
-
-# title A
-unbind A
-bind A command-prompt "rename-window %%"
+unbind Space
+bind Space previous-window
+bind @ next-layout
 
 # windows ^W w 
 unbind ^W
@@ -89,21 +87,14 @@ bind ^W list-windows
 unbind w
 bind w list-windows
 
-# quit \ 
-unbind \ 
-bind \ confirm-before "kill-server"
-
-# kill K k 
-unbind K
-bind K confirm-before "kill-window"
-unbind k
-bind k confirm-before "kill-window"
+# displays
+unbind ^
+bind ^ list-clients
 
 # redisplay ^L l 
 unbind ^L
+unbind r
 bind ^L refresh-client
-unbind l
-bind l refresh-client
 
 # reload config
 unbind ^R
@@ -114,18 +105,15 @@ bind-key | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
 
 
 ## vim style key bindings
-unbind Tab
-bind Tab select-pane -t :.+
 
 # move around panes with j and k, a bit like vim
-# as of tmux 1.1, there is no way to move based on pane position (ie, no way to
-# move the pane to the right)
-bind j select-pane -t :.+ # down-pane
-bind k select-pane -t :.- # up-pane
+unbind l
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # resize panes like vim
-# feel free to change the "1" to however many lines you want to resize by, only
-# one at a time can be slow
 bind < resize-pane -L 1
 bind > resize-pane -R 1
 bind - resize-pane -D 1
@@ -133,4 +121,6 @@ bind + resize-pane -U 1
 
 
 ## key bindings compatible with my Emacs config
-bind C-o select-pane -t :.- # up-pane
+unbind Tab
+bind Tab select-pane -t :.+
+bind C-o select-pane -t :.-
