--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ set-window-option -g window-status-activity-attr bright
 # some more options
 set-option -g base-index 1
 set-option -g set-titles on
+set-option -g history-limit 10000000
 set-window-option -g monitor-activity on
 set-window-option -g mode-keys vi
 set-window-option -g clock-mode-style 24
