tmux updates: only keybinding, enhanced auto-tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -125,3 +125,6 @@ bind + resize-pane -U 1
 unbind Tab
 bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
+
+# make this client the only one by detaching all other clients
+bind O attach-session -d
