Support for ~/.tmux_local

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -128,3 +128,7 @@ bind C-o select-pane -t :.-
 
 # make this client the only one by detaching all other clients
 bind O attach-session -d
+
+
+# local config
+source-file ~/.tmux_local
