tmux new-session key + auto-tmux update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,11 +55,15 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 ## GNU Screen style key bindings, which I'm pretty used to
 
-# screen
+# window
 unbind ^C
 bind ^C new-window
 unbind c
 bind c new-window
+
+# session
+unbind S
+bind S new-session
 
 # detach
 unbind ^D
