--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ set-option -g set-titles-string "#T - #I:#W#F#S^#H"
 set-option -g status-justify right
 set-option -g status-left "#T"
 set-option -g status-left-length 48
-set-option -g status-right "#S^#H"
+set-option -g status-right "#[fg=white,bright]#S#[default]^#H"
 set-option -g status-right-length 16
 
 # 256 color: XXX tmux should be launched with option -2.
@@ -28,19 +28,26 @@ set-option -g default-terminal "screen-256color"
 #   curl http://www.frexx.de/xterm-256-notes/data/256colors2.pl | perl
 
 # status colours
-set-option -g status-bg blue
-set-option -g status-fg black
+set-option -g status-bg black
+set-option -g status-fg brightblack
+set-option -g status-attr none
+set-window-option -g window-status-fg brightblack
+set-window-option -g window-status-attr none
 set-option -g status-left-fg white
 set-option -g status-left-attr bright
-set-window-option -g window-status-fg black
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-activity-attr bright
+set-window-option -g window-status-activity-fg green
+set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-content-fg yellow
+set-window-option -g window-status-content-attr none
+set-window-option -g window-status-bell-fg red
+set-window-option -g window-status-bell-attr none
 
 # some more options
 set-option -g base-index 1
 set-option -g set-titles on
+set-option -g display-time 2500
 set-option -g history-limit 10000000
 set-window-option -g monitor-activity on
 set-window-option -g mode-keys vi
@@ -53,7 +60,7 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 ### Key Bindings
 
-## GNU Screen style key bindings, which I'm pretty used to
+## Some easier ones GNU Screen style key bindings, which I'm pretty used to
 
 # window
 unbind ^C
@@ -64,10 +71,23 @@ bind c new-window
 # session
 unbind S
 bind S new-session
+unbind ^S
+bind ^S switch-client -l
+
+# break window into new session
+unbind @
+#bind @ command-prompt -I "1" -p "(break window to new-session)" "new-session -d -n'moving' -s'%1' 'sleep 1'; swap-window -t'%1:moving'; switch-client -t'%1:'"
+bind @ split-window -d -h -l0 \
+    'n=$(tmux list-sessions -F "#S" | grep "^[0-9]\\+$" | sort -nr | head -n 1); let n++; \
+        tmux command-prompt -I "$n" -p "(break window into new session)" \
+            "new-session -d -s\"%1\" -n moving \"sleep 1\"; swap-window -t\"%1:moving\"; switch-client -t\"%1:\""'
 
 # detach
 unbind ^D
 bind ^D detach
+# make this client the only one by detaching all other clients
+unbind O
+bind O attach-session -d
 
 # next ^@ ^N sp n 
 unbind ^N
@@ -84,21 +104,13 @@ unbind p
 bind p previous-window
 unbind Space
 bind Space previous-window
-bind @ next-layout
 
 # windows ^W w 
 unbind ^W
-bind ^W list-windows
-unbind w
-bind w list-windows
+bind ^W choose-window
 
-# displays
-unbind ^
-bind ^ list-clients
-
-# redisplay ^L l 
+# redisplay ^L
 unbind ^L
-unbind r
 bind ^L refresh-client
 
 # reload config
@@ -129,9 +141,6 @@ bind + resize-pane -U 1
 unbind Tab
 bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
-
-# make this client the only one by detaching all other clients
-bind O attach-session -d
 
 
 # local config
