--- a/.inputrc
+++ b/.inputrc
@@ -4,6 +4,7 @@
 
 # enhanced options
 set completion-ignore-case On
+set completion-map-case On
 set visible-stats On
 set mark-symlinked-directories On
 
@@ -16,7 +17,10 @@ set show-all-if-unmodified Off
 set menu-complete-display-prefix Off
 Tab:      menu-complete
 #  a la <S-Tab>, <C-L> and <C-D>
-"\e[Z":   menu-complete-backward
+# XXX menu-complete-backward is available for bash >= 4
+#"\e[Z":   menu-complete-backward
+#     So here's a workaround, see: http://brettterpstra.com/2011/09/25/quick-tip-some-inputrc-fun/
+"\e[Z":   "\e-1\C-i"
 "\e\C-d": possible-completions
 "\e\C-l": complete
 
@@ -65,9 +69,9 @@ $if Bash
     "\eo": "\C-p\C-a\e]  "
 
     # a better backward/forward words by space with Meta-Shift-B/F
-    "\eviB": vi-backward-bigword
-    "\eviW": vi-forward-bigword
-    "\eviE": vi-end-bigword
+    "\eviB": vi-bWord
+    "\eviW": vi-fWord
+    "\eviE": vi-eWord
     "\eB": "\eviB"
     "\eF": "\C-f\eviE\C-f"
 
