vim Makefile requires bash

--- a/.vim/Makefile
+++ b/.vim/Makefile
@@ -2,6 +2,8 @@
 # Author: Jaeho Shin <netj@sparcs.org>
 # Created: 2010-08-07
 
+export SHELL := $(shell which bash)
+
 .PHONY: all
 all: $(shell sed <Makefile -n '/:.*\#\#$$/ s/:.*$$//p')
 
